opam-version: "2.0"
maintainer: ["Thibaut Mattio"]
authors: ["Thibaut Mattio"]
homepage: "https://github.com/tmattio/spin"
doc: "https://tmattio.github.io/spin"
bug-reports: "https://github.com/tmattio/spin/issues"
depends: [
  "dune-release" {dev}
  "merlin" {dev}
  "ocamlformat" {dev}
  "utop" {dev}
]
