(library
 (name Spin_test)
 (public_name spin.test)
 (flags -open Base -linkall -g -w -9)
 (libraries base rely.lib spin.lib)
 (modules
  (:standard \ test_runner)))

(executable
 (name test_runner)
 (public_name test_runner.exe)
 (modules test_runner)
 (libraries base spin.test)
 (flags -open Base))

(alias
 (name runtest)
 (deps (:test_runner test_runner.exe))
 (action (run %{test_runner} --color=always)))

(include_subdirs unqualified)
