(library
 (name spin_test)
 (flags -linkall -g -w +42 -open Spin_std)
 (libraries spin spin_std alcotest stdio)
 (modules
  (:standard \ test_runner)))

(test
 (name test_runner)
 (libraries spin_test)
 (modules test_runner)
 (action
  (run %{test} -q --color=always)))

(include_subdirs unqualified)
