(lang dune 2.0)

(name {{ project_slug }})

(source
 (github {{ github_username }}/{{ project_slug }}))

(license MIT)

(authors
  "{{ username }}{% if author_email %} <{{ author_email }}>{% endif %}")

(maintainers
  "{{ username }}{% if author_email %} <{{ author_email }}>{% endif %}")

(generate_opam_files true)

(package
 (name {{ project_slug }})
 (synopsis "{{ project_description }}")
 (description "{{ project_description }}")
 (depends
  (ocaml
   (>= 4.08.0))
  dune
  (alcotest :with-test)
  (odoc :with-doc)
  js_of_ocaml
  js_of_ocaml-ppx))
