(lang dune 2.0)

(name {{ project_slug }})

(source
 (github {{ github_username }}/{{ project_slug }}))

(license MIT)

(authors
  "{{ username }}{% if author_email %} <{{ author_email }}>{% endif %}")

(maintainers
  "{{ username }}{% if author_email %} <{{ author_email }}>{% endif %}")

(generate_opam_files true)

(allow_approximate_merlin)

(package
 (name {{ project_slug }})
 (synopsis "{{ project_description }}")
 (description "\
{{ project_description }}
")
 (depends
  (ocaml (>= 4.08.0))
  dune
  {%- if test_framework == 'Rely' %}
  ; Add Rely when released on Opam
  ; (rely :with-test)
  {%- else %}
  (alcotest :with-test)
  {%- endif %}
  (odoc :with-doc)
  {%- if syntax == 'Reason' %}
  (reason :build)
  {%- endif %}
  (ppxlib :build)))
