(lang dune 2.0)

(name {{ project_slug }})

{% if github_username %}(documentation "https://{{ github_username }}.github.io/{{ project_slug }}/"){% endif %}

{% if github_username %}(source
 (github {{ github_username }}/{{ project_slug }})){% endif %}

(license ISC)

(authors
 "{{ author_name }}{% if author_email %} <{{ author_email }}>{% endif %}")

(maintainers
 "{{ author_name }}{% if author_email %} <{{ author_email }}>{% endif %}")

(generate_opam_files true)

(allow_approximate_merlin)

(package
 (name {{ project_slug }})
 (synopsis "{{ project_description }}")
 (description "{{ project_description }}")
 (depends
  (ocaml
   (>= 4.08.0))
  dune
  {%- if test_framework == 'Alcotest' %}
  (alcotest :with-test)
  {%- endif %}
  (odoc :with-doc)
  (ppxlib :build)))
