(lang dune 2.0)

(name demo)

(documentation "https://tmattio.github.io/demo/")

(source
 (github tmattio/demo))

(license MIT)

(authors "Thibaut Mattio")

(maintainers "Thibaut Mattio")

(generate_opam_files true)

(package
 (name demo)
 (synopsis "{{ project_description }}")
 (description "{{ project_description }}")
 (depends
  (ocaml
   (>= 4.08.0))
  (dune
   (>= 2.0))
  (alcotest :with-test)
  (odoc :with-doc)
  tyxml
  async_kernel
  core_kernel
  (incr_dom
   (>= 0.14))
  js_of_ocaml
  ppx_jane
  ppx_deriving))
