(lang dune 2.0)

(name demo)

(source
 (github tmattio/demo))

(license MIT)

(authors "Thibaut Mattio")

(maintainers "Thibaut Mattio")

(generate_opam_files true)

(allow_approximate_merlin)

(package
 (name demo)
 (synopsis "Fullstack application for Demo")
 (description "Fullstack application for Demo.")
 (depends
  (ocaml
   (>= 4.08.0))
  (dune
   (>= 2.0))
  (odoc :with-doc)
  (crunch :build)
  opium
  ppx_rapper
  caqti
  caqti-lwt
  caqti-driver-postgresql
  (alcotest :with-test)
  (alcotest-lwt :with-test)
  (opium-testing :with-test)))
