(rule
 (targets {{ project_snake }}_generated_stubs.ml)
 (action
  (run stubs/gen_stubs.exe ml %{targets})))

(rule
 (targets {{ project_snake }}_generated_stubs.c)
 (action
  (run stubs/gen_stubs.exe c %{targets})))

(library
 (name {{ project_snake }})
 (public_name {{ project_snake }})
 (libraries ctypes {{ project_snake }}.stubs)
 (foreign_stubs
  (language c)
  (names {{ project_snake }}_generated_stubs))
 (flags
  (:standard -w -4)))
