(library
 (name {{ project_snake }}_test)
 (libraries {% if test_framework == 'Rely' %}rely.lib{% else %}alcotest{% endif %} {{ project_slug }})
 (modules
  (:standard \ test_runner))
 (preprocess
  (pps {{ project_slug }}))
 (flags (:standard -linkall -g -open StdLabels{% if test_framework == 'Rely' %} -w +A-48-42-40{% endif %})))

(executable
 (name test_runner)
 (libraries {% if test_framework == 'Rely' %}rely.lib{% else %}alcotest{% endif %} {{ project_snake }}_test)
 (modules test_runner)
 (preprocess
  (pps {{ project_slug }}))
 (flags (:standard -open StdLabels{% if test_framework == 'Rely' %} -w +A-48-42-40{% endif %})))

(rule
 (alias runtest)
 (action
  (run ./test_runner.exe -q --color=always)))

(include_subdirs unqualified)
