(library
 (name {{ project_snake }}_test)
 (libraries {% if test_framework == 'Rely' %}rely.lib{% else %}alcotest{% endif %} {{ project_slug }})
 (modules
  (:standard \ test_runner))
 (preprocess
  (pps {{ project_slug }}))
 (flags (:standard -linkall -g {% if test_framework == 'Rely' %} -w -40{% endif %})))

(test
 (name test_runner)
 (libraries {% if test_framework == 'Rely' %}rely.lib{% else %}alcotest{% endif %} {{ project_snake }}_test)
 (modules test_runner)
 (preprocess
  (pps {{ project_slug }}))
 (flags (:standard {% if test_framework == 'Rely' %} -w -40{% endif %})))

(include_subdirs unqualified)
