(rule
 (targets main.css)
 (deps
  (:data
   tailwind.css
   tailwind.config.js
   (source_tree node_modules)))
 (mode
  (promote-until-clean-into static/))
 (action
  (run %{bin:npx} tailwindcss build tailwind.css -c tailwind.config.js -o
    %{targets})))

(rule
 (target main.js)
 (deps ../bin/main.bc.js)
 (mode
  (promote-until-clean-into static/))
 (action
  (copy %{deps} %{target})))
