{% if css_framework == 'TailwindCSS' -%}
(rule
 (targets main.css)
 (deps
  (:data
   tailwind.css
   tailwind.config.js
   (source_tree node_modules)))
 (mode
  (promote-until-clean-into static/))
 (action
  (run %{bin:npx} tailwindcss build -c tailwind.config.js -o main.css
    %{targets})))
{%- endif %}

(rule
 (target main.js)
 (deps ../bin/main.bc.js)
 (mode
  (promote-until-clean-into static/))
 (action
  (copy %{deps} %{target})))
