{%- if css_framework == 'TailwindCSS' -%}
(rule
 (targets main.css)
 (deps
  (:data
   tailwind.config.js
   {%- if package_manager == 'Opam' %}
   package-lock.json
   {%- endif %}
   (source_tree node_modules)))
 (mode
  (promote-until-clean-into static/))
 (action
  (run %{bin:npx} tailwindcss build -c tailwind.config.js -o %{targets})))
{%- endif %}

(rule
 (target main.js)
 (deps ../bin/main.bc.js)
 (mode
  (promote-until-clean-into static/))
 (action
  (copy %{deps} %{target})))
